docs(02-content-system): create phase plan

--- a/.planning/phases/02-content-system/02-01-PLAN.md
+++ b/.planning/phases/02-content-system/02-01-PLAN.md
@@ -9,45 +9,45 @@ files_modified:
   - package.json
   - content/faqs/engine/oil-type-recommendation.md
   - content/faqs/engine/break-in-period.md
-  - content/faqs/general/paint-codes.md
+  - content/faqs/general/warranty-coverage.md
 autonomous: true
 
 must_haves:
   truths:
-    - "content.config.ts imports z from 'zod' (not deprecated @nuxt/content re-export)"
-    - "FAQ schema requires sourceUrl, sourceAuthor, sourceDate, and lastUpdated fields"
-    - "Sample FAQ markdown files exist in content/faqs/ with valid frontmatter matching the schema"
-    - "Each sample FAQ has question, category, sourceUrl, sourceAuthor, sourceDate, and lastUpdated in frontmatter"
+    - "FAQ frontmatter schema requires sourceUrl, sourceAuthor, sourceDate, and lastUpdated fields"
+    - "Zod is imported from 'zod' package, not from '@nuxt/content'"
+    - "Sample FAQ markdown files exist with valid frontmatter that passes schema validation"
+    - "Content files are organized in category subdirectories under content/faqs/"
   artifacts:
     - path: "content.config.ts"
-      provides: "Hardened FAQ collection schema with required source metadata and lastUpdated"
+      provides: "Hardened FAQ collection schema with required source metadata"
       contains: "from 'zod'"
     - path: "content/faqs/engine/oil-type-recommendation.md"
-      provides: "Sample FAQ with engine category and full source metadata"
+      provides: "Sample FAQ with engine category"
       contains: "sourceUrl:"
     - path: "content/faqs/engine/break-in-period.md"
-      provides: "Sample FAQ with engine category and full source metadata"
-      contains: "lastUpdated:"
-    - path: "content/faqs/general/paint-codes.md"
-      provides: "Sample FAQ with general category and full source metadata"
-      contains: "sourceAuthor:"
+      provides: "Sample FAQ with engine category"
+      contains: "sourceUrl:"
+    - path: "content/faqs/general/warranty-coverage.md"
+      provides: "Sample FAQ with general category"
+      contains: "sourceUrl:"
   key_links:
     - from: "content.config.ts"
       to: "content/faqs/**/*.md"
-      via: "source: 'faqs/**/*.md' glob pattern"
-      pattern: "source.*faqs/\\*\\*/\\*\\.md"
+      via: "source glob pattern"
+      pattern: "source: 'faqs/\\*\\*/\\*.md'"
     - from: "content.config.ts"
       to: "zod"
-      via: "import { z } from 'zod'"
+      via: "direct import"
       pattern: "from 'zod'"
 ---
 
 <objective>
-Harden the FAQ content schema and create sample FAQ content files.
+Harden the FAQ content schema to require source metadata fields and create sample FAQ content files.
 
-Purpose: Establish the validated content foundation that all FAQ rendering depends on. The schema ensures every FAQ has source attribution metadata (URL, author, date) and freshness tracking (lastUpdated). Sample content proves the schema works and gives the page route (Plan 02) something to render.
+Purpose: Establish the data contract for all FAQ content — required source attribution (URL, author, date) and freshness tracking (lastUpdated). Fix the deprecated `z` import from `@nuxt/content` to use `zod` directly. Create sample content to validate the schema and provide data for Plan 02's rendering work.
 
-Output: Updated content.config.ts with required source fields, zod as explicit dependency, and 3 sample FAQ markdown files across 2 categories.
+Output: Updated `content.config.ts` with required fields, `zod` as explicit dependency, and 3 sample FAQ markdown files across 2 categories.
 </objective>
 
 <execution_context>
@@ -70,174 +70,170 @@ Output: Updated content.config.ts with required source fields, zod as explicit d
   <name>Task 1: Harden FAQ schema and fix zod import</name>
   <files>content.config.ts, package.json</files>
   <action>
-1. Add `zod` as an explicit dependency in package.json. Run `yarn add zod` (the package is already available as a transitive dep of @nuxt/content, but adding it explicitly follows the project's pattern for transitive deps -- same as better-sqlite3 and eslint).
+1. Add `zod` as an explicit dependency in package.json. Run `yarn add zod` to install it. This follows the project pattern of making transitive deps explicit (like better-sqlite3 and eslint).
 
-2. Update content.config.ts:
-   - Change the import from `import { defineCollection, defineContentConfig, z } from '@nuxt/content'` to two separate imports:
+2. Update `content.config.ts`:
+   - Change the import from `import { defineCollection, defineContentConfig, z } from '@nuxt/content'` to:
      - `import { defineCollection, defineContentConfig } from '@nuxt/content'`
      - `import { z } from 'zod'`
-   - The deprecated z re-export from @nuxt/content will be removed in a future release (per research).
+   - This fixes the deprecated re-export (see research: "z from @nuxt/content is deprecated").
 
-3. Update the faqs collection schema to make source fields REQUIRED (remove .optional()) and add lastUpdated:
+3. Update the faqs collection schema to make source fields required and add lastUpdated:
    ```typescript
    schema: z.object({
-     // FAQ display fields
+     // FAQ display field
      question: z.string(),
+     // Category for filtering (matches directory structure)
      category: z.string(),
-     // Source attribution (required -- every FAQ must cite its source)
+     // Source attribution (required for transparency)
      sourceUrl: z.string(),
      sourceAuthor: z.string(),
+     // Dates stored as ISO strings (z.string() not z.date() -- avoids YAML parsing issues)
      sourceDate: z.string(),
-     // Freshness tracking (manual -- git dates are unreliable in SSG)
+     // Freshness tracking (manual -- git dates unreliable in SSG)
      lastUpdated: z.string(),
    }),
    ```
+   Note: All source fields change from `.optional()` to required. The `lastUpdated` field is new.
 
-4. Keep the `content` collection unchanged.
+4. Remove the `.gitkeep` from `content/faqs/` since we are adding real files.
 
-IMPORTANT: Use `z.string()` for all date fields (NOT z.date()). YAML date parsing is inconsistent and z.date() causes validation failures.
+5. Run `yarn dev` briefly to confirm the config parses without errors, then stop the server.
   </action>
   <verify>
-- `yarn install` completes without errors
-- `grep "from 'zod'" content.config.ts` shows the new import
-- `grep -c "optional" content.config.ts` returns 0 (no optional source fields)
-- `grep "lastUpdated" content.config.ts` shows the new field
+- `grep "from 'zod'" content.config.ts` shows the direct zod import
+- `grep -v "optional()" content.config.ts` confirms no optional source fields remain
+- `grep "lastUpdated" content.config.ts` confirms the new field exists
+- `grep '"zod"' package.json` confirms zod is an explicit dependency
+- `yarn dev` starts without config errors (stop after confirming)
   </verify>
-  <done>content.config.ts imports z from 'zod', all source metadata fields are required, lastUpdated field exists, zod is an explicit dependency in package.json</done>
+  <done>
+- content.config.ts imports z from 'zod' (not @nuxt/content)
+- All source metadata fields (sourceUrl, sourceAuthor, sourceDate, lastUpdated) are required in schema
+- zod is listed as an explicit dependency in package.json
+- Dev server starts without schema/config errors
+  </done>
 </task>
 
 <task type="auto">
   <name>Task 2: Create sample FAQ content files</name>
-  <files>content/faqs/engine/oil-type-recommendation.md, content/faqs/engine/break-in-period.md, content/faqs/general/paint-codes.md</files>
+  <files>content/faqs/engine/oil-type-recommendation.md, content/faqs/engine/break-in-period.md, content/faqs/general/warranty-coverage.md</files>
   <action>
-Remove the `.gitkeep` file from `content/faqs/` (no longer needed once real files exist).
+Create 3 sample FAQ markdown files across 2 categories (engine, general) to validate the schema and provide content for Plan 02's rendering work. Each file must include all required frontmatter fields plus SEO fields (title, description) from asSeoCollection.
 
-Create category subdirectories and 3 sample FAQ markdown files. Each file MUST have all required frontmatter fields: question, category, sourceUrl, sourceAuthor, sourceDate, lastUpdated, title, description.
+1. Create `content/faqs/engine/oil-type-recommendation.md`:
+   ```markdown
+   ---
+   question: "What oil type does the Integra Type S require?"
+   category: "engine"
+   sourceUrl: "https://www.integraforums.com/forum/threads/oil-type.12345/"
+   sourceAuthor: "ForumUser123"
+   sourceDate: "2025-08-15"
+   lastUpdated: "2026-02-09"
+   title: "Oil Type Recommendation"
+   description: "Recommended oil type and weight for the Acura Integra Type S K20C1 engine"
+   ---
 
-The `title` and `description` fields come from asSeoCollection() and are used for SEO meta tags. `question` is the FAQ-specific display field. Both title and description should be present.
+   The Acura Integra Type S uses a K20C1 turbocharged engine that requires
+   **0W-20** full synthetic oil meeting Honda HTO-06 specification.
 
-File 1: `content/faqs/engine/oil-type-recommendation.md`
-```markdown
----
-question: "What oil type does the Integra Type S require?"
-category: "engine"
-sourceUrl: "https://www.integraforums.com/forum/threads/oil-type.12345/"
-sourceAuthor: "ForumUser123"
-sourceDate: "2025-08-15"
-lastUpdated: "2026-02-09"
-title: "Oil Type Recommendation"
-description: "Recommended oil type and weight for the Acura Integra Type S K20C1 engine"
----
+   ## Capacity
 
-The Acura Integra Type S uses a K20C1 turbocharged engine that requires
-**0W-20** full synthetic oil meeting Honda HTO-06 specification.
+   - With filter change: 5.7 quarts (5.4 liters)
+   - Without filter change: 5.3 quarts (5.0 liters)
 
-## Capacity
+   ## Recommended Brands
 
-- With filter change: 5.7 quarts (5.4 liters)
-- Without filter change: 5.3 quarts (5.0 liters)
+   - Honda Genuine 0W-20 (OEM)
+   - Mobil 1 0W-20
+   - Pennzoil Ultra Platinum 0W-20
+   ```
 
-## Recommended Brands
+2. Create `content/faqs/engine/break-in-period.md`:
+   ```markdown
+   ---
+   question: "What is the recommended break-in period for the Type S?"
+   category: "engine"
+   sourceUrl: "https://www.integraforums.com/forum/threads/break-in.23456/"
+   sourceAuthor: "TypeSOwner"
+   sourceDate: "2025-06-20"
+   lastUpdated: "2026-01-15"
+   title: "Break-In Period"
+   description: "Recommended break-in procedure for new Acura Integra Type S engines"
+   ---
 
-- Honda Genuine 0W-20 (OEM)
-- Mobil 1 0W-20
-- Pennzoil Ultra Platinum 0W-20
-```
+   Honda recommends a **600-mile break-in period** for the Integra Type S.
 
-File 2: `content/faqs/engine/break-in-period.md`
-```markdown
----
-question: "What is the recommended break-in period?"
-category: "engine"
-sourceUrl: "https://www.integraforums.com/forum/threads/break-in-period.23456/"
-sourceAuthor: "TypeS_Owner"
-sourceDate: "2025-06-20"
-lastUpdated: "2026-02-09"
-title: "Break-in Period"
-description: "Recommended break-in procedure and duration for the Integra Type S"
----
+   ## During Break-In
 
-Acura recommends a **600-mile** (1,000 km) break-in period for the Integra Type S.
+   - Keep RPM below 4,000
+   - Vary engine speed — avoid holding constant RPM for extended periods
+   - Avoid hard braking when possible
+   - Do not use cruise control for long stretches
 
-## During Break-in
+   ## After Break-In
 
-- Keep RPM below **4,000** for the first 600 miles
-- Vary your speed — avoid holding constant RPM for extended periods
-- Avoid hard braking when possible
-- Do not use cruise control for long distances
+   After 600 miles, gradually increase RPM range over the next few hundred miles
+   before using the full rev range.
+   ```
 
-## After Break-in
+3. Create `content/faqs/general/warranty-coverage.md`:
+   ```markdown
+   ---
+   question: "What does the Integra Type S warranty cover?"
+   category: "general"
+   sourceUrl: "https://www.acura.com/warranty"
+   sourceAuthor: "Acura"
+   sourceDate: "2025-01-01"
+   lastUpdated: "2026-02-01"
+   title: "Warranty Coverage"
+   description: "Overview of Acura Integra Type S warranty coverage and duration"
+   ---
 
-After 600 miles, gradually increase RPM usage. Most owners report
-the engine feels noticeably smoother after 1,500-2,000 miles.
+   The Acura Integra Type S comes with a comprehensive warranty package.
 
-## First Oil Change
+   ## Coverage Periods
 
-Acura's maintenance schedule calls for the first oil change at
-**7,500 miles** or 12 months. Some owners prefer an early change at
-1,000-3,000 miles to flush break-in particulates.
-```
+   - **Basic:** 4 years / 50,000 miles (bumper-to-bumper)
+   - **Powertrain:** 6 years / 70,000 miles
+   - **Corrosion:** 5 years / unlimited miles
+   - **Roadside Assistance:** 4 years / unlimited miles
 
-File 3: `content/faqs/general/paint-codes.md`
-```markdown
----
-question: "What are the available paint codes for the Integra Type S?"
-category: "general"
-sourceUrl: "https://www.integraforums.com/forum/threads/paint-codes.34567/"
-sourceAuthor: "DE5_Colors"
-sourceDate: "2025-09-01"
-lastUpdated: "2026-02-09"
-title: "Paint Codes"
-description: "Complete list of factory paint color codes for the Acura Integra Type S"
----
+   ## Key Notes
 
-The Integra Type S is available in the following exterior colors:
+   - Warranty begins on the original date of purchase
+   - Transferable to subsequent owners within the coverage period
+   - Modifications may void specific coverage areas — consult your dealer
+   ```
 
-## 2024-2025 Model Year Colors
-
-| Color | Code |
-|-------|------|
-| Championship White | NH-0 |
-| Platinum White Pearl | NH-883P |
-| Apex Blue Pearl | B-621P |
-| Tiger Eye Pearl | YR-652P |
-| Performance Red Pearl | R-585P |
-
-## Touch-Up Paint
-
-OEM touch-up paint pens are available from Acura dealers.
-Refer to the sticker on the driver's door jamb for your specific color code.
-```
-
-Ensure all dates use ISO format (YYYY-MM-DD) as plain strings.
+4. Run `yarn dev` and verify the content is discovered (check terminal output for content collection loading). Stop the server after confirming.
   </action>
   <verify>
-- `ls content/faqs/engine/` shows oil-type-recommendation.md and break-in-period.md
-- `ls content/faqs/general/` shows paint-codes.md
-- `! test -f content/faqs/.gitkeep` confirms .gitkeep removed
-- `grep "sourceUrl:" content/faqs/engine/oil-type-recommendation.md` shows a URL
-- `grep "lastUpdated:" content/faqs/general/paint-codes.md` shows a date
-- `yarn dev` starts without content validation errors (check terminal output for schema errors)
+- All 3 markdown files exist: `ls content/faqs/engine/ content/faqs/general/`
+- Each file has all required frontmatter fields: `grep -l "sourceUrl" content/faqs/**/*.md` returns 3 files
+- `yarn dev` starts and content collection loads without validation errors
   </verify>
-  <done>3 sample FAQ files exist across 2 categories (engine, general), each with all required frontmatter fields (question, category, sourceUrl, sourceAuthor, sourceDate, lastUpdated, title, description)</done>
+  <done>
+- 3 sample FAQ files exist across 2 category directories (engine/, general/)
+- Each file contains all required frontmatter: question, category, sourceUrl, sourceAuthor, sourceDate, lastUpdated, title, description
+- Content validates against the hardened schema without errors
+  </done>
 </task>
 
 </tasks>
 
 <verification>
-1. `yarn dev` starts without errors -- content schema validates all 3 FAQ files
-2. `grep "from 'zod'" content.config.ts` confirms proper import
-3. `grep -r "sourceUrl:" content/faqs/` returns 3 matches (one per FAQ file)
-4. `grep -r "lastUpdated:" content/faqs/` returns 3 matches
-5. No `.optional()` calls remain on source metadata fields in content.config.ts
+1. `content.config.ts` imports `z` from `'zod'` (not `'@nuxt/content'`)
+2. All 6 FAQ-specific fields in schema are required (no `.optional()`)
+3. `zod` appears in package.json dependencies
+4. 3 markdown files exist under `content/faqs/` in 2 category directories
+5. `yarn dev` starts without content schema errors
 </verification>
 
 <success_criteria>
-- content.config.ts uses direct zod import (not deprecated @nuxt/content re-export)
-- All source metadata fields (sourceUrl, sourceAuthor, sourceDate) are required in schema
-- lastUpdated field exists in schema as z.string()
-- 3 sample FAQ files validate against the schema without errors
-- Dev server starts cleanly with content system loading all 3 FAQs
+- Schema contract is locked: all FAQ content MUST have source attribution and freshness date
+- Deprecated zod import is fixed
+- Sample content validates and is ready for Plan 02's rendering work
 </success_criteria>
 
 <output>
