--- a/.planning/phases/02-content-system/02-02-PLAN.md
+++ b/.planning/phases/02-content-system/02-02-PLAN.md
@@ -6,51 +6,40 @@ wave: 2
 depends_on: ["02-01"]
 files_modified:
   - app/pages/faqs/[...slug].vue
-  - app/components/SourceAttribution.vue
-  - app/components/FreshnessIndicator.vue
 autonomous: true
 
 must_haves:
   truths:
-    - "Navigating to /faqs/engine/oil-type-recommendation renders the FAQ markdown content"
-    - "Source attribution displays as a clickable link showing author name and original post date"
-    - "Last updated date is visible on the FAQ page"
-    - "404 error shown when navigating to a non-existent FAQ path"
+    - "User can navigate to /faqs/engine/oil-type-recommendation and see rendered FAQ content"
+    - "Content displays 'Last updated' date visible to users"
+    - "Source attribution renders as clickable link to original post with author name"
+    - "404 error shown when navigating to non-existent FAQ path"
+    - "FAQ question displays as page heading"
   artifacts:
     - path: "app/pages/faqs/[...slug].vue"
-      provides: "Catch-all FAQ page route with content fetching, rendering, and metadata"
-      contains: "queryCollection"
-    - path: "app/components/SourceAttribution.vue"
-      provides: "Reusable source citation display with external link, author, and date"
-      contains: "sourceUrl"
-    - path: "app/components/FreshnessIndicator.vue"
-      provides: "Last updated date display with locale-aware formatting"
-      contains: "Intl.DateTimeFormat"
+      provides: "Catch-all FAQ page with content rendering, source attribution, and freshness display"
+      min_lines: 30
   key_links:
     - from: "app/pages/faqs/[...slug].vue"
-      to: "content/faqs/**/*.md"
+      to: "faqs collection"
       via: "queryCollection('faqs').path(route.path).first()"
-      pattern: "queryCollection.*faqs"
+      pattern: "queryCollection\\('faqs'\\)"
     - from: "app/pages/faqs/[...slug].vue"
-      to: "app/components/SourceAttribution.vue"
-      via: "auto-imported component in Pug template"
-      pattern: "SourceAttribution"
-    - from: "app/pages/faqs/[...slug].vue"
-      to: "app/components/FreshnessIndicator.vue"
-      via: "auto-imported component in Pug template"
-      pattern: "FreshnessIndicator"
-    - from: "app/pages/faqs/[...slug].vue"
-      to: "@nuxt/content ContentRenderer"
-      via: "ContentRenderer component for markdown rendering"
+      to: "ContentRenderer"
+      via: "renders markdown AST"
       pattern: "ContentRenderer"
+    - from: "app/pages/faqs/[...slug].vue"
+      to: "source metadata"
+      via: "faq.sourceUrl displayed as <a> link"
+      pattern: ":href=\"faq\\.sourceUrl\""
 ---
 
 <objective>
-Build the FAQ page route and display components for content rendering, source attribution, and freshness indicators.
+Create the FAQ page route with content rendering, source attribution, and freshness indicator display.
 
-Purpose: This is the user-facing layer that makes FAQ content accessible. Users navigate to a FAQ URL and see the rendered markdown answer with clear source attribution (who wrote it, where it came from) and freshness tracking (when it was last updated). This satisfies all four Phase 2 success criteria.
+Purpose: This is the presentation layer that makes FAQ content visible to users. It creates the catch-all route that maps any `/faqs/**` path to the corresponding markdown content, renders it with Bulma typography, and displays source attribution and last-updated date — satisfying all four Phase 2 success criteria.
 
-Output: Catch-all page route at `app/pages/faqs/[...slug].vue`, `SourceAttribution` component, and `FreshnessIndicator` component.
+Output: `app/pages/faqs/[...slug].vue` — a complete FAQ detail page.
 </objective>
 
 <execution_context>
@@ -66,141 +55,123 @@ Output: Catch-all page route at `app/pages/faqs/[...slug].vue`, `SourceAttributi
 @.planning/phases/02-content-system/02-01-SUMMARY.md
 @content.config.ts
 @app/layouts/default.vue
-@app/pages/index.vue
 </context>
 
 <tasks>
 
 <task type="auto">
-  <name>Task 1: Create SourceAttribution and FreshnessIndicator components</name>
-  <files>app/components/SourceAttribution.vue, app/components/FreshnessIndicator.vue</files>
-  <action>
-Create two small display components following existing codebase patterns (Pug templates, script setup lang="ts", brief comments).
-
-**FreshnessIndicator.vue:**
-- Props: `date` (string, required) -- ISO date string from lastUpdated frontmatter
-- Uses `Intl.DateTimeFormat('en-US', { year: 'numeric', month: 'long', day: 'numeric' })` for formatting
-- Displays: calendar icon (LucideCalendar, size 14) + "Last updated: February 9, 2026"
-- Bulma classes: `.is-size-7.has-text-grey` for subtle presentation
-- Computed property for formatted date (not inline in template)
-
-```pug
-//- Freshness indicator showing when FAQ was last updated
-p.is-size-7.has-text-grey
-  LucideCalendar(:size="14" style="vertical-align: middle;")
-  |  Last updated: {{ formattedDate }}
-```
-
-**SourceAttribution.vue:**
-- Props: `url` (string, required), `author` (string, required), `date` (string, required)
-- Same date formatting approach as FreshnessIndicator (Intl.DateTimeFormat)
-- Displays in a Bulma `.box`: external link icon (LucideExternalLink, size 14) + "Source: AuthorName (linked to URL) . date"
-- The author name is a clickable link with target="_blank" rel="noopener noreferrer"
-- Bulma classes: `.box.mt-5` wrapper, `.is-size-7` for text
-
-```pug
-//- Source attribution box with link to original post
-.box.mt-5
-  p.is-size-7
-    LucideExternalLink(:size="14" style="vertical-align: middle;")
-    |  Source:&nbsp;
-    a(:href="url" target="_blank" rel="noopener noreferrer") {{ author }}
-    |  &middot; {{ formattedDate }}
-```
-
-Both components use `defineProps<{ ... }>()` TypeScript syntax.
-  </action>
-  <verify>
-- `cat app/components/SourceAttribution.vue` shows Pug template, script setup, sourceUrl/author/date props
-- `cat app/components/FreshnessIndicator.vue` shows Pug template, script setup, date prop, Intl.DateTimeFormat usage
-- `grep "Intl.DateTimeFormat" app/components/FreshnessIndicator.vue` confirms date formatting
-- `grep "Intl.DateTimeFormat" app/components/SourceAttribution.vue` confirms date formatting
-- `yarn lint` passes without errors on the new components
-  </verify>
-  <done>SourceAttribution component renders source link with author and date; FreshnessIndicator component renders "Last updated" with formatted date; both use Pug templates and TypeScript props</done>
-</task>
-
-<task type="auto">
-  <name>Task 2: Create catch-all FAQ page route</name>
+  <name>Task 1: Create catch-all FAQ page with content rendering and metadata display</name>
   <files>app/pages/faqs/[...slug].vue</files>
   <action>
-Create the catch-all page route that renders any FAQ by its URL path. Follow existing page patterns (see app/pages/index.vue for conventions).
+Create `app/pages/faqs/[...slug].vue` as a Vue SFC with Pug template and TypeScript setup script. This single page handles all FAQ routes via Nuxt Content's path-based routing.
 
-**app/pages/faqs/[...slug].vue:**
+**Template (Pug):**
 
-Script setup section:
-1. Get current route with `useRoute()`
-2. Fetch FAQ using `queryCollection('faqs').path(route.path).first()` wrapped in `useAsyncData(route.path, ...)`
-   - CRITICAL: Use `queryCollection` (v3 API), NOT `queryContent` (v2 API -- does not exist)
-3. If `!faq.value`, throw 404: `throw createError({ statusCode: 404, statusMessage: 'FAQ not found' })`
-4. Set page title from FAQ question: `useHead({ title: faq.value.question })`
-
-Template section (Pug):
 ```pug
-//- FAQ detail page with content, source attribution, and freshness
+//- FAQ detail page with content rendering and source attribution
 section.section(v-if="faq")
   .container
     //- FAQ question as page heading
     h1.title {{ faq.question }}
 
-    //- Freshness indicator (last updated date)
-    FreshnessIndicator(:date="faq.lastUpdated")
+    //- Freshness indicator -- last updated date
+    p.is-size-7.has-text-grey.mb-5
+      LucideCalendar(:size="14" style="vertical-align: middle;")
+      |  Last updated: {{ formatDate(faq.lastUpdated) }}
 
     //- Rendered markdown content (Bulma .content class for typography)
     .content
       ContentRenderer(:value="faq")
 
-    //- Source attribution with link to original post
-    SourceAttribution(
-      :url="faq.sourceUrl"
-      :author="faq.sourceAuthor"
-      :date="faq.sourceDate"
-    )
+    //- Source attribution box with external link
+    .box.mt-5
+      p.is-size-7.mb-0
+        LucideExternalLink(:size="14" style="vertical-align: middle;")
+        |  Source:
+        = ' '
+        a(:href="faq.sourceUrl" target="_blank" rel="noopener noreferrer")
+          | {{ faq.sourceAuthor }}
+        |  &middot; {{ formatDate(faq.sourceDate) }}
 ```
 
-Layout: uses default layout (no explicit layout needed).
+**Script (TypeScript setup):**
 
-IMPORTANT notes:
-- Components (SourceAttribution, FreshnessIndicator, ContentRenderer) are auto-imported by Nuxt -- no import statements needed
-- Wrap ContentRenderer in `.content` div for Bulma typography styling
-- The `faq` object from queryCollection includes all frontmatter fields defined in the schema
+```typescript
+// Fetch FAQ content matching the current route path
+const route = useRoute()
+const { data: faq } = await useAsyncData(route.path, () => {
+  return queryCollection('faqs').path(route.path).first()
+})
+
+// 404 if FAQ not found
+if (!faq.value) {
+  throw createError({ statusCode: 404, statusMessage: 'FAQ not found' })
+}
+
+// SEO metadata from frontmatter question field
+useHead({ title: faq.value.question })
+
+// Format ISO date string (e.g. "2026-02-09") to human-readable (e.g. "February 9, 2026")
+const formatDate = (dateStr: string): string => {
+  return new Intl.DateTimeFormat('en-US', {
+    year: 'numeric',
+    month: 'long',
+    day: 'numeric',
+  }).format(new Date(dateStr))
+}
+```
+
+Key implementation details:
+- Uses `queryCollection('faqs')` (v3 API, NOT `queryContent`)
+- `.path(route.path).first()` matches the FAQ by its URL path
+- `ContentRenderer` renders the parsed markdown AST
+- Wrapping in `.content` applies Bulma's typography styling
+- `formatDate` uses native `Intl.DateTimeFormat` (no library needed)
+- Source link opens in new tab with `rel="noopener noreferrer"` for security
+- LucideCalendar and LucideExternalLink auto-import via nuxt-lucide-icons module
+- 404 handling via `createError` for non-existent paths
+
+**Do NOT create separate SourceAttribution or FreshnessIndicator components.** The display is simple enough to be inline in this page. Extract to components only if reused in Phase 3 (FAQ listing page). Over-abstracting now would add files without value.
   </action>
   <verify>
-- `yarn dev` starts without errors
-- Visit `http://localhost:3000/faqs/engine/oil-type-recommendation` -- page renders with:
-  - "What oil type does the Integra Type S require?" as heading
-  - "Last updated: February 9, 2026" freshness indicator
-  - Rendered markdown content with "0W-20" bold, capacity list, brands list
-  - Source attribution box with link to integraforums.com, author "ForumUser123", and date
-- Visit `http://localhost:3000/faqs/engine/break-in-period` -- renders second FAQ
-- Visit `http://localhost:3000/faqs/general/paint-codes` -- renders third FAQ (different category)
-- Visit `http://localhost:3000/faqs/nonexistent` -- shows 404 error
-- `yarn lint` passes
+1. Start dev server: `yarn dev`
+2. Navigate to `http://localhost:3000/faqs/engine/oil-type-recommendation` -- should show:
+   - "What oil type does the Integra Type S require?" as page heading
+   - "Last updated: February 9, 2026" with calendar icon
+   - Rendered markdown with headings, lists, and bold text
+   - Source box with "ForumUser123" as clickable link to the forum URL
+3. Navigate to `http://localhost:3000/faqs/general/warranty-coverage` -- should render warranty FAQ
+4. Navigate to `http://localhost:3000/faqs/nonexistent` -- should show 404 error
+5. Check browser tab title shows the FAQ question text
+6. Stop the dev server
   </verify>
-  <done>Catch-all FAQ page route renders markdown content with ContentRenderer, displays source attribution as clickable link, shows last updated date, and returns 404 for missing FAQs</done>
+  <done>
+- /faqs/engine/oil-type-recommendation renders with question heading, formatted content, freshness date, and source attribution link
+- /faqs/general/warranty-coverage renders similarly
+- /faqs/nonexistent returns 404
+- Source attribution is a clickable external link opening in a new tab
+- "Last updated" date is formatted in human-readable English (e.g., "February 9, 2026")
+- Page title reflects the FAQ question
+  </done>
 </task>
 
 </tasks>
 
 <verification>
-1. `yarn dev` starts cleanly -- no content or rendering errors
-2. Navigate to `/faqs/engine/oil-type-recommendation`:
-   - Question heading visible
-   - "Last updated" date formatted and visible
-   - Markdown body rendered with proper typography (Bulma .content)
-   - Source attribution box shows clickable link to forum post, author name, date
-3. Navigate to `/faqs/general/paint-codes` -- different category FAQ renders correctly
-4. Navigate to `/faqs/does-not-exist` -- 404 error displayed
-5. `yarn lint` passes on all new files
-6. `yarn generate` succeeds (FAQ pages pre-rendered for SSG)
+1. `app/pages/faqs/[...slug].vue` exists and uses `queryCollection('faqs')` (not `queryContent`)
+2. Three sample FAQ pages render correctly at their expected URLs
+3. Each page shows: question heading, last-updated date, rendered markdown body, source attribution link
+4. Source attribution link is clickable and opens in new tab
+5. Non-existent FAQ paths return 404
+6. Page titles reflect FAQ questions
 </verification>
 
 <success_criteria>
-- FAQ pages render at correct URL paths derived from content file locations
-- Source attribution renders as clickable external link with author name and original date
-- "Last updated" date is visible on every FAQ page
-- 404 handling works for non-existent FAQ paths
-- All code follows project conventions (Pug templates, TypeScript, Prettier formatting, brief comments)
+All four Phase 2 success criteria are met:
+1. Admin can create/edit FAQ content by adding markdown files in content/ directory (validated by Plan 01's sample files rendering here)
+2. Each content file stores source URL, original author, and original post date in frontmatter (enforced by required schema from Plan 01)
+3. Content displays "Last updated" date visible to users (freshness indicator on page)
+4. Source attribution renders as clickable link to original post (source box at bottom of page)
 </success_criteria>
 
 <output>
